--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <header>
         <table id="abc">
             <tr>
-                <td><img style="border-radius: 108px;" width="150px" src="images/Ankit.jpeg"
+                <td><img style="border-radius: 108px;" width="150px" src="https://avatars.githubusercontent.com/u/114291247?s=96&v=4"
                         alt=" Ankit profile Photo "> </td>
 
                   <td>
